--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -191,6 +191,7 @@
     <Content Include="Public\js\popper.min.js" />
     <Content Include="Views\Profile\forgotpassword.aspx" />
     <Content Include="Views\Auth\register.aspx" />
+    <Content Include="Views\Quiztool\editquiz.aspx" />
     <Content Include="Views\Quiztool\question.aspx" />
     <Content Include="Views\Quiztool\quizcreator.aspx" />
     <Content Include="Views\Quiztool\quizstart.aspx" />
@@ -386,6 +387,13 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Quiztool\editquiz.aspx.cs">
+      <DependentUpon>editquiz.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Quiztool\editquiz.aspx.designer.cs">
+      <DependentUpon>editquiz.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Quiztool\question.aspx.cs">
       <DependentUpon>question.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
