--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -199,6 +199,7 @@
     <Content Include="Views\Quiztool\editquiz.aspx" />
     <Content Include="Views\Quiztool\quizcreator.aspx" />
     <Content Include="Views\Quiztool\quizstart.aspx" />
+    <Content Include="Views\Quiztool\quizzes.aspx" />
     <Content Include="Views\Resources\resourceUpload.aspx" />
     <Content Include="Views\Resources\Test.aspx" />
     <Content Include="Views\Resources\viewResources.aspx" />
@@ -418,6 +419,13 @@
     </Compile>
     <Compile Include="Views\Quiztool\quizstart.aspx.designer.cs">
       <DependentUpon>quizstart.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Quiztool\quizzes.aspx.cs">
+      <DependentUpon>quizzes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Quiztool\quizzes.aspx.designer.cs">
+      <DependentUpon>quizzes.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Resources\resourceUpload.aspx.cs">
       <DependentUpon>resourceUpload.aspx</DependentUpon>
