--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -114,6 +114,7 @@
     <Content Include="Public\img\Gacha\banner.jpg" />
     <Content Include="Public\img\Gacha\banner.png" />
     <Content Include="Public\img\Logo\WISELY30.jpg" />
+    <Content Include="Public\js\plannerscript.js" />
     <Content Include="Public\videos\gacha_common.mp4" />
     <Content Include="Public\videos\gacha_rare.mp4" />
     <Content Include="Public\videos\gacha_super.mp4" />
