--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -107,6 +107,7 @@
     <Content Include="bin\WISLEY.dll" />
     <Content Include="bin\WISLEY.dll.config" />
     <Content Include="bin\WISLEY.pdb" />
+    <Content Include="Public\css\planner.css" />
     <Content Include="Public\img\Badges\Badge_Beginner.png" />
     <Content Include="Public\img\Badges\Badge_Group.png" />
     <Content Include="Public\img\Badges\Badge_Post.png" />
@@ -114,7 +115,7 @@
     <Content Include="Public\img\Gacha\banner.jpg" />
     <Content Include="Public\img\Gacha\banner.png" />
     <Content Include="Public\img\Logo\WISELY30.jpg" />
-    <Content Include="Public\js\planner.js" />
+    <Content Include="Public\js\planners.js" />
     <Content Include="Public\videos\gacha_common.mp4" />
     <Content Include="Public\videos\gacha_rare.mp4" />
     <Content Include="Public\videos\gacha_super.mp4" />
