--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -108,9 +108,18 @@
     <Content Include="bin\WISLEY.dll.config" />
     <Content Include="bin\WISLEY.pdb" />
     <Content Include="Public\css\planner.css" />
+    <Content Include="Public\img\Badges\Badge_100000WIS.png" />
+    <Content Include="Public\img\Badges\Badge_10000WIS.png" />
+    <Content Include="Public\img\Badges\Badge_1000WIS.png" />
     <Content Include="Public\img\Badges\Badge_Beginner.png" />
+    <Content Include="Public\img\Badges\Badge_Gacha.png" />
+    <Content Include="Public\img\Badges\Badge_Gacha_11.png" />
     <Content Include="Public\img\Badges\Badge_Group.png" />
     <Content Include="Public\img\Badges\Badge_Post.png" />
+    <Content Include="Public\img\Badges\Badge_Quiz.png" />
+    <Content Include="Public\img\Badges\Badge_Quiz_10.png" />
+    <Content Include="Public\img\Badges\Badge_Thuglife.png" />
+    <Content Include="Public\img\Badges\Badge_ToDoList.png" />
     <Content Include="Public\img\default.jpg" />
     <Content Include="Public\img\Gacha\banner.jpg" />
     <Content Include="Public\img\Gacha\banner.png" />
