--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -124,6 +124,7 @@
     <Content Include="Public\img\Gacha\banner.jpg" />
     <Content Include="Public\img\Gacha\banner.png" />
     <Content Include="Public\img\Logo\WISELY30.jpg" />
+    <Content Include="Public\img\Teaching.png" />
     <Content Include="Public\js\planners.js" />
     <Content Include="Public\videos\gacha_common.mp4" />
     <Content Include="Public\videos\gacha_rare.mp4" />
