--- a/WISLEY/Web.config
+++ b/WISLEY/Web.config
@@ -12,8 +12,9 @@
   
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="10240" />
     <sessionState timeout="480"></sessionState>
+    
   <pages>
       <controls>
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
